@@ -1,5 +1,11 @@
 2002-06-07  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* pp/Makefile.in:
+	* dae/Makefile.in:
+	* gui/Makefile.in: update dependencies for library
+
+2002-06-07  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* libopt++/popt_options.cpp:
 	* libopt++/popt_options.h: memory leak fix
 
